--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <h1 id="career">&ensp;経歴</h1><hr>
             <p>生まれも育ちも東京で、小学生の頃は野球選手を目指していました。</p>
               <div style="text-align:center;">
-                <img src="野球.jpg" height="200">
+                <img src="baseball.jpg" height="200">
               </div>
               <br>
               <p>小学校６年生の時に第五腰椎を骨折して１年間野球ができなくなり、たまたま見つけた彫刻の教室へ通って見たら面白く、彫刻家を目指す様になりました。</p>
