--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           
             <p>私は、元々革製品が持つ独自の質感や匂い、経年変化などがとても好きで、革の鞄や靴、財布などを日々の生活で使いながら経年変化などを楽しんでいます。</p>
             <div style="text-align: center;">
-              <img src="DSC_0458_Original.jpg" height=350>
-              <img src="IMG_2349_Original_Original.JPG" height=350>
+              <img src="shoes1.jpg" height=350>
+              <img src="shoes2.JPG" height=350>
             </div>
             
             <h1 id="career">&ensp;経歴</h1><hr>
@@ -138,15 +138,15 @@
         <h1 id="works">&ensp;これまでの作品</h1><hr>
         <h2>ファウンデーションコース</h2>
         <div style="text-align:center;">
-          <img src="IMG_2072_Original.jpg" height=400>
-           <img src="IMG_0703_Original.jpg" height=400>
+          <img src="works.jpg" height=400>
+           <img src="work1.jpg" height=400>
         </div><br>
         <h2>学部</h2>
         <div class="picture">
           <div style="text-align: center;">
-            <img src="fast moving.jpg" height=200>
-            <img src="frankenstein.jpg" height=200>
-            <img src="urban.jpg" height=200>
+            <img src="fastmoving.jpg" height=200>
+            <img src="frankensteinele.jpg" height=200>
+            <img src="urbanenviron.jpg" height=200>
           </div>
         </div><br><br>
         <div class="video">
@@ -171,7 +171,7 @@
         <p>また、日本の伝統工芸に興味があり、中でも江戸指物が趣味の一つです。木材以外の材料を一切使わないという日本の技術にとても興味を持ち、また手入れしながら長く使えるという点に魅力を感じました。この様なサスティナブルなプロダクトに興味があります。</p>
             <div style="text-align:center;">
               <img src="box.JPG"  height=300>
-              <img src="IMG_2212_Original.jpg"  height=300>
+              <img src="tvboard.jpg"  height=300>
               <img src="board.jpg"  height=300>
               <img src="process.jpg"  height=300>
               <img src="desk.HEIC"  height=300>
