--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h2>&emsp; ABOUT</h2>
       <div class="flex">
         <figure class="pic1">
-          <img src="IMG_1740_Original.jpg">
+          <img src="profile.jpg">
           </figure>
           <div class="about-container">
           <p>私のウェブサイトをご覧いただきありがとうございます。</p>
