--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </div>
       </div>
     </header>
-
+      <div style="text-align:center;">
         <h1 class="title">Takashi Mitsuyuki　　土屋鞄製造所　内定者</h1>
-      
+      </div>
     </div>
     
     <div class="about">
