--- a/index.html
+++ b/index.html
@@ -73,37 +73,37 @@
             <p>こんにちは。光行貴史と申します。</p>
             <p>2000年4月30日生まれで、牡牛座です。</p>
             <div style="text-align:center;">
-              <img src="london.JPG" height="200">
+              <img src="london.JPG">
             </div>
           
             <p>私は、元々革製品が持つ独自の質感や匂い、経年変化などがとても好きで、革の鞄や靴、財布などを日々の生活で使いながら経年変化などを楽しんでいます。</p>
             <div style="text-align: center;">
-              <img src="shoes1.jpg" height=350>
-              <img src="shoes2.JPG" height=350>
+              <img src="shoes1.jpg">
+              <img src="shoes2.JPG">
             </div>
             
             <h1 id="career">&ensp;経歴</h1><hr>
             <p>生まれも育ちも東京で、小学生の頃は野球選手を目指していました。</p>
               <div style="text-align:center;">
-                <img src="baseball.jpg" height="200">
+                <img src="baseball.jpg">
               </div>
               <br>
               <p>小学校６年生の時に第五腰椎を骨折して１年間野球ができなくなり、たまたま見つけた彫刻の教室へ通って見たら面白く、彫刻家を目指す様になりました。</p>
               <div style="text-align:center;">
-                <img src="owl.jpg" height="200">
+                <img src="owl.jpg" >
               </div>
               <br>
               <p>中学、高校と美術予備校に通いながら東京の美術大学を狙っていましたが、高校３年生の春に海外の美術大学も選択肢にあるということを英語の先生に教えてもらい、海外の美術大学について調べました。</p>
               <div style="text-align:center;">
-                <img src="chicken.jpg" height="200">
-                <img src="dear.jpg" height="200">
+                <img src="chicken.jpg">
+                <img src="dear.jpg" >
               </div>
               <br>
               <p>日本のエージェントの話を聞きに行ったら、２ヶ月で大学に入るためのポートフォリオが作れるコースがロンドン芸術大学であるということを聞き、高校３年生の夏に渡英しました。</p>
               <br>
               <p>ロンドンでは、デッサンの概念やコンセプトアートなど、日本と違うことが多くて戸惑いましたが、コースの最後に受けた試験に合格し、ロンドン行きを決めました。</p>
               <div style="text-align:center;">
-                <img src="orientation.jpg" height="200">
+                <img src="orientation.jpg" >
               </div>
               <p></p>
               <p>ファウンデーションコース入学後は１年後に学部への試験があるので、そのためのポートフォリオを作っていましたが、選考を決めるときに最初は彫刻を勉強しようと思っていましたが、プロダクトデザインを選びました。</p>
@@ -138,15 +138,15 @@
         <h1 id="works">&ensp;これまでの作品</h1><hr>
         <h2>ファウンデーションコース</h2>
         <div style="text-align:center;">
-          <img src="works.jpg" height=400>
-           <img src="work1.jpg" height=400>
+          <img src="works.jpg" >
+           <img src="work1.jpg" >
         </div><br>
         <h2>学部</h2>
         <div class="picture">
           <div style="text-align: center;">
-            <img src="fastmoving.jpg" height=200>
-            <img src="frankensteinele.jpg" height=200>
-            <img src="urbanenviron.jpg" height=200>
+            <img src="fastmoving.jpg" >
+            <img src="frankensteinele.jpg" >
+            <img src="urbanenviron.jpg" >
           </div>
         </div><br><br>
         <div class="video">
@@ -170,16 +170,16 @@
         <h1 id="hobby">&ensp;趣味</h1><hr>
         <p>また、日本の伝統工芸に興味があり、中でも江戸指物が趣味の一つです。木材以外の材料を一切使わないという日本の技術にとても興味を持ち、また手入れしながら長く使えるという点に魅力を感じました。この様なサスティナブルなプロダクトに興味があります。</p>
             <div style="text-align:center;">
-              <img src="box.JPG"  height=300>
-              <img src="tvboard.jpg"  height=300>
-              <img src="board.jpg"  height=300>
-              <img src="process.jpg"  height=300>
-              <img src="desk.HEIC"  height=300>
+              <img src="box.JPG" >
+              <img src="tvboard.jpg" >
+              <img src="board.jpg" >
+              <img src="process.jpg" >
+              <img src="desk.HEIC"  >
             </div><br>
         <p>盆栽も中学生の頃から育てています。</p>
         <div style="text-align:center;">
-          <img src="wood1.jpg" height=250>
-           <img src="wood2.jpg" height=250>
+          <img src="wood1.jpg">
+           <img src="wood2.jpg">
         </div><br>
 
         <h1 id="contact">&ensp;お問い合せ</h1><hr>
