--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header>
       <div class="header">
         <div class="header-logo">ABOUT</div>
-        <span class="fa fa-bars menu-icon"></span>
 
         <div class="header-list">
           <ul>
@@ -151,8 +150,8 @@
         </div><br><br>
         <div class="video">
           <div style="text-align: center;">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/cH_Grvx8FYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/e-pccmW3XRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/cH_Grvx8FYg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe  src="https://www.youtube.com/embed/e-pccmW3XRk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </div>
 
@@ -195,6 +194,7 @@
         </div>
      </div>
 
+     <span class="fa fa-bars menu-icon"></span>
       <div class="sidebar">
         <div style="text-align: center;">
           <h2>Takashi Mitsuyuki</h2>
