--- a/index.html
+++ b/index.html
@@ -194,8 +194,13 @@
         </div>
      </div>
 
-     <span class="fa fa-bars menu-icon"></span>
+     
       <div class="sidebar">
+        <button class="hamburger">
+          <span class="hamburger_bar"></span>
+          <span class="hamburger_bar"></span>
+          <span class="hamburger_bar"></span>
+        </button>
         <div style="text-align: center;">
           <h2>Takashi Mitsuyuki</h2>
           <a href="#profile">プロフィール</a><br>
