--- a/index.html
+++ b/index.html
@@ -196,11 +196,13 @@
 
      
       <div class="sidebar">
-        <button class="hamburger">
-          <span class="hamburger_bar"></span>
-          <span class="hamburger_bar"></span>
-          <span class="hamburger_bar"></span>
-        </button>
+        <div style="text-align:center">
+          <button class="hamburger">
+            <span class="hamburger_bar"></span>
+            <span class="hamburger_bar"></span>
+            <span class="hamburger_bar"></span>
+          </button>
+        </div>
         <div style="text-align: center;">
           <h2>Takashi Mitsuyuki</h2>
           <a href="#profile">プロフィール</a><br>
