--- a/index.html
+++ b/index.html
@@ -196,13 +196,17 @@
 
      
       <div class="sidebar">
-          <h2>Takashi Mitsuyuki</h2>
-          <a href="#profile">プロフィール</a><br>
-          <a href="#career">経歴</a><br>
-          <a href="#works">これまでの作品</a><br>
-          <a href="#skill">スキル</a><br>
-          <a href="#hobby">趣味</a><br>
-          <a href="#contact">お問い合せ</a>
+        <h2>Takashi Mitsuyuki</h2>
+        <div style="text-align: center;">
+          <div class="link">
+            <a href="#profile">プロフィール</a><br>
+            <a href="#career">経歴</a><br>
+            <a href="#works">これまでの作品</a><br>
+            <a href="#skill">スキル</a><br>
+            <a href="#hobby">趣味</a><br>
+            <a href="#contact">お問い合せ</a>
+          </div>
+        </div>
       </div>
 
     </div>
