--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       </div>
     </header>
       <div style="text-align:center;">
-        <h1 class="title">Takashi Mitsuyuki　　土屋鞄製造所　内定者</h1>
+        <h1 class="title">Takashi Mitsuyuki<br>
+                 土屋鞄製造所　内定者</h1>
       </div>
     </div>
     
@@ -59,6 +60,20 @@
             LinkedIn</a>
         </div>
       </div>
+
+      <div class="btn-wrapper-a">
+        <a href="https://twitter.com/LbyYqju?ref_src=twsrc%5Etfw" class="btn twitter">
+          <span class="fa fa-twitter"></span>
+          Twitter</a>
+          <br>
+        <a href="https://www.instagram.com/takasi1748/" class="btn instagram">
+          <span class="fa fa-instagram"></span>
+          Instagram</a><br>
+        <a href="https://www.linkedin.com/feed/" class="btn linkedin">
+          <span class="fa fa-linkedin"></span>
+          LinkedIn</a>
+      </div>
+
 
     </div><br>
 
@@ -222,7 +237,3 @@
     
   </body>
 </html>
-
-
-
-
