--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <a href="https://twitter.com/LbyYqju?ref_src=twsrc%5Etfw" class="btn twitter">
           <span class="fa fa-twitter"></span>
           Twitter</a>
-          <br>
+        
         <a href="https://www.instagram.com/takasi1748/" class="btn instagram">
           <span class="fa fa-instagram"></span>
-          Instagram</a><br>
+          Instagram</a>
         <a href="https://www.linkedin.com/feed/" class="btn linkedin">
           <span class="fa fa-linkedin"></span>
           LinkedIn</a>
