--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
           </ul>
         </div>
       </div>
+
+      <div class="header-contents">
+        <div style="text-align:center;">
+          <h1 class="title">Takashi Mitsuyuki<br>
+                   土屋鞄製造所　内定者</h1>
+        </div>
+      </div>
+
     </header>
+
       <div style="text-align:center;">
         <h1 class="title">Takashi Mitsuyuki<br>
                  土屋鞄製造所　内定者</h1>
@@ -42,7 +51,7 @@
           <div class="about-container">
           <p>私のウェブサイトをご覧いただきありがとうございます。</p>
           <p>プロダクトデザイナーとして活動している光行貴史と申します。</p>
-          <p>今後も作品を通して、ますます多くの方々とのつながりを大切にしていきたいと思います。</p>
+          <p>今後もますます多くの方々とのつながりを大切にしていきたいと思います。</p>
           <p>これからもどんどん作品をお届けしてまいりたいと思います。</p>
           <p>これまでの作品や私の経歴などについてはについて以下からご覧ください。</p>
           </div>
@@ -237,7 +246,3 @@
     
   </body>
 </html>
-
-
-
-
