--- a/index.html
+++ b/index.html
@@ -26,14 +26,10 @@
           </ul>
         </div>
       </div>
-
-      
-
     </header>
 
       <div style="text-align:center;">
-        <h1 class="title">Takashi Mitsuyuki<br>
-                 土屋鞄製造所　内定者</h1>
+        <h1 class="title">光行貴史</h1>
       </div>
     </div>
     
@@ -197,9 +193,8 @@
         <p>盆栽も中学生の頃から育てています。</p>
         <div style="text-align:center;">
           <img src="wood1.jpg">
-           <img src="wood2.jpg">
+          <img src="wood2.jpg">
         </div><br>
-
         <h1 id="contact">&ensp;お問い合せ</h1><hr>
         <div class="message-wrapper">
           <div class="container">
