--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </header>
 
       <div style="text-align:center;">
-        <h1 class="title">光行貴史</h1>
+        <h1 class="title">Takashi Mitsuyuki</h1>
       </div>
     </div>
     
